  route_teleport_minDistance.
- New conditions _whenGround and _whenNotGround can e.g. cast a skill
  only if certain conditions are met. For example:

  useSelf_skill Pneuma {
	  lvl 1
      monsters Raydric Archer
	  whenNotGround Pneuma
  }

  will use the Pneuma skill if you are fighting Raydric Archer, and
  there is not already a Pneuma affecting you.

New timeouts.txt options:
- ai_attack_unfail 5

Bug fixes:
- Kore can walk on walkable water now (bug #21).
- Don't open shop immediately after login in X-Kore mode (bug #49).
- sitAuto_idle doesn't conflict with shopAuto_open's timeout now (bug #50).
- MO_BODYRELOCATION is now recognized as an area-usage skill.
- Don't display "level 65535" when an area-usage skill is used.
- Incoming Request to join Guild message now displays guild name.
- Alchemist potions aren't called [?254] anymore.
- Cards in equipment in storage weren't being displayed.
- $item->{type} is now set correctly for equipment in storage.
- When following players by name, typing 'follow A' then 'follow B' would
  cause you to still be following A instead of B.
- Fixed a crash when cart inventory is not available (such as during login).
- Fixed chat room creation with non-default usercount, private-flag and passwd
- $config{'char'} eq '' is no longer treated as $config{'char'} == 0
- Route AI should get stuck a lot less now.
- Autostorage will now walk back to the NPC if it fails to teleport back.
- Item <x> has been upgraded to <y> now correctly shows the old upgrade
  level for <x>
- When determining whether not to attack a monster due to it being too
  close to another player (to avoid KSing), exempt party members.
  Implemented in positionNearPlayer().
- teleportAuto_search no longer spams the server with the teleport packet
  many times per second.
- Guild login/logout and chat messages no longer show blanks all the time.
- Kore will not attack monsters that are trapped by non-party members, or
  monsters that are being lured.